# ligeia

./: .gitignore  Cargo.toml  LICENSE  README.md  svcb.txt
core2/: Cargo.toml
core2/src/: array.rs  implicit_forest.rs  implicit_forest2.rs  lib.rs  logic.rs  unit.rs  waves.rs
core2/src/unit/: array.rs  slice.rs
core2/src/waves/: change.rs
examples/: load-vcd.rs
examples/load-vcd/: Cargo.toml
ligeia/: Cargo.toml
ligeia-core/: Cargo.toml
ligeia-core/src/: forest.rs  implicit_forest.rs  lazy.rs  lib.rs  logic.rs  logic2.rs  meta.rs  progress.rs  unsized_types.rs  waveform.rs  waves.rs  waves2.rs
ligeia-core/src/waves/: change.rs  scope.rs
ligeia-svcb/: Cargo.toml
ligeia-svcb/src/: lib.rs  svcb.rs
ligeia-vcd/: Cargo.toml
ligeia-vcd/examples/: load_vcd.rs
ligeia-vcd/src/: lib.rs  vcd2.rs
ligeia/src/: main.rs
ligeia/src/shaders/: lines.wgsl  main.wgsl  one_bit.wgsl
src/: bvcd.txt  db.rs  forest.rs  gui.rs  info_bars.rs  lazy.rs  main.rs  mmap_alloc.rs  mmap_vec.rs  progress.rs  svcb.rs  svcb.txt  tbd.txt  types.rs  unsized_types.rs  vcd.rs  vcd2.rs
src/old/: mmap_vec.rs  types.rs  vcd.rs
src/shaders/: trace.wgsl
