[package]
name = "ligeia"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>"]
edition = "2018"

[profile.release]
debug = true
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
clap = "*"
# wgpu = "0.6"
# vcd = { git = "https://github.com/lachlansneff/rust-vcd.git" }
mapr = "0.8.0"
# leb128 = "0.2.4"
varint-simd = "0.1.1"
tempfile = "3.1.0"
# winit = "0.23.0"
# futures = "0.3.8"
# nom = "6.0"
thiserror = "1.0"
ahash = "0.6.2"
anyhow = "1.0"
circular = "0.3"

[dependencies.vcd]
git = "https://github.com/lachlansneff/rust-vcd.git"
# path = "../rust-vcd"