[package]
name = "ligeia-core"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mmap-alloc"]
mmap-alloc = ["mapr", "lazy_static", "effective-limits", "tempfile"]

[dependencies]
thiserror = "1.0"

mapr = { version = "0.8.0", optional = true }
lazy_static = { version = "1.4", optional = true }
effective-limits = { version = "0.5.2", optional = true }
tempfile = { version = "3.1.0", optional = true }
